deploy/k8s/components/pipeline-image-builder/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: profile-installer-deny-network
  namespace: memql-build-system
spec:
  podSelector: {}
  policyTypes: [Ingress, Egress]
  ingress: []
  egress: []
